syntax = "proto3";

package thru.common.v1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/Unto-Labs/thru-net/grpc/pkg/proto/thru/common/v1;commonv1";
option java_multiple_files = true;
option java_package = "network.thru.common.v1";
option csharp_namespace = "Thru.Common.V1";
option ruby_package = "Thru::Common::V1";
option objc_class_prefix = "THU";
option swift_prefix = "THU";

// PageRequest contains pagination parameters for listing RPCs.
message PageRequest {
  // Maximum number of items to return in a single response.
  optional uint32 page_size = 1 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).uint32.gte = 1,
    (buf.validate.field).uint32.lte = 1000
  ];

  // Token identifying the position to resume from.
  optional string page_token = 2 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).string.max_len = 512
  ];

  // Optional ordering specification in "field [asc|desc]" form.
  optional string order_by = 3 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).string.max_len = 256
  ];
}

// PageResponse captures pagination metadata returned with list results.
message PageResponse {
  // Token to retrieve the next page of results, if any.
  optional string next_page_token = 1 [(google.api.field_behavior) = OPTIONAL];

  // Total number of items available when known.
  optional uint64 total_size = 2 [(google.api.field_behavior) = OPTIONAL];
}
